fixed the mistakes

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
       <!-- Header -->
-    <header class="page-header">
+    <header class="page-header header-line">
       <div class="container header-container">
       <nav class="page-nav">
         <a class="logo link" href="index.html">WEB<span>STUDIO</span></a>
@@ -69,8 +70,7 @@
             <button class="modal-btn buttons" type="button">Marketing</button>
           </li>
         </ul>
-        </div>
-        <div class="container project-container">
+        <h2 class="visually-hidden">Project-cards</h2>
         <ul class="project-card-list list">
           <li class="project-item">
             <img class="project-card"
@@ -79,8 +79,10 @@
               width="360"
               height="300"
             />
-            <h3 class="feature-titel project-titel">Banking App Interface Concept</h3>
-            <p class="feature-text project-text">App</p>
+            <div class="project-item-text">
+            <h3 class="feature-title">Banking App Interface Concept</h3>
+            <p class="feature-text">App</p>
+            </div>
           </li>
           <li class="project-item">
             <img class="project-card"
@@ -89,8 +91,10 @@
               width="360"
               height="300"
             />
-            <h3 class="feature-titel project-titel">Cashless Payment</h3>
-            <p class="feature-text project-text">Marketing</p>
+            <div class="project-item-text">
+            <h3 class="feature-title">Cashless Payment</h3>
+            <p class="feature-text">Marketing</p>
+          </div>
           </li>
           <li class="project-item">
             <img class="project-card"
@@ -99,8 +103,10 @@
               width="360"
               height="300"
             />
-            <h3 class="feature-titel">Meditaion App</h3>
+            <div class="project-item-text">
+            <h3 class="feature-title">Meditaion App</h3>
             <p class="feature-text">App</p>
+          </div>
           </li>
           <li class="project-item">
             <img class="project-card" 
@@ -108,8 +114,10 @@
             alt="helm" width="360" 
             height="300" 
             />
-            <h3 class="feature-titel project-titel">Taxi Service</h3>
+            <div class="project-item-text">
+            <h3 class="feature-title">Taxi Service</h3>
             <p class="feature-text">Marketing</p>
+            </div>
           </li>
           <li class="project-item">
             <img class="project-card"
@@ -118,8 +126,10 @@
               width="360"
               height="300"
             />
-            <h3 class="feature-titel project-titel">Screen Illustrations</h3>
-            <p class="feature-text project-text">Design</p>
+            <div class="project-item-text">
+            <h3 class="feature-title">Screen Illustrations</h3>
+            <p class="feature-text">Design</p>
+            </div>
           </li>
           <li class="project-item">
             <img class="project-card"
@@ -128,8 +138,10 @@
               width="360"
               height="300"
             />
-            <h3 class="feature-titel project-titel">Online Courses</h3>
-            <p class="feature-text project-text">Marketing</p>
+            <div class="project-item-text">
+            <h3 class="feature-title">Online Courses</h3>
+            <p class="feature-text">Marketing</p>
+            </div>
           </li>
           <li class="project-item">
             <img class="project-card"
@@ -138,8 +150,10 @@
               width="360"
               height="300"
             />
-            <h3 class="feature-titel project-titel">Instagram Stories Concept</h3>
-            <p class="feature-text project-text">Design</p>
+            <div class="project-item-text">
+            <h3 class="feature-title">Instagram Stories Concept</h3>
+            <p class="feature-text">Design</p>
+            </div>
           </li>
           <li class="project-item">
             <img class="project-card"
@@ -148,8 +162,10 @@
               width="360"
               height="300"
             />
-            <h3 class="feature-titel project-titel">Organic Food</h3>
-            <p class="feature-text project-text">Web Site</p>
+            <div class="project-item-text">
+            <h3 class="feature-title">Organic Food</h3>
+            <p class="feature-text">Web Site</p>
+            </div>
           </li>
           <li class="project-item">
             <img class="project-card"
@@ -158,8 +174,10 @@
               width="360"
               height="300"
             />
-            <h3 class="feature-titel project-titel">Fresh Coffee</h3>
-            <p class="feature-text project-text">Web Site</p>
+            <div class="project-item-text">
+            <h3 class="feature-title">Fresh Coffee</h3>
+            <p class="feature-text">Web Site</p>
+            </div>
           </li>
         </ul>
         </div>
