--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
     <header class="page-header">
-      <div class="container header-container">
+      <div class="container header-container  ">
       <nav class="page-nav">
         <a class="logo link" href="index.html">WEB<span>STUDIO</span></a>
         <ul class="menu list">
@@ -51,7 +52,7 @@
     <main>
       <!-- Hero -->
       <section class="hero">
-        <div class="container hero-container">
+        <div class="container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="modal-btn hero-btn" type="button">Order Service</button>
         </div>
@@ -62,28 +63,28 @@
         <div class="container">
         <ul class="work-features list">
           <li>
-            <h3 class="feature-titel">Strategy</h3>
+            <h3 class="feature-title">Strategy</h3>
             <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="feature-titel">Punctuality</h3>
+            <h3 class="feature-title">Punctuality</h3>
             <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="feature-titel">Diligence</h3>
+            <h3 class="feature-title">Diligence</h3>
             <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="feature-titel">Technologies</h3>
+            <h3 class="feature-title">Technologies</h3>
             <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -136,8 +137,10 @@
               width="264"
               height="260"
             />
+            <div class="team-text">
             <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-work">Product Designer</p>
+            <p class="team-work">Product Designer</p> 
+            </div>
           </li>
           <li class="team-item">
             <img class="team-card" 
@@ -146,8 +149,10 @@
               width="264"
               height="260"
             />
+            <div class="team-text">
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-work">Frontend Developer</p>
+            </div>
           </li>
           <li class="team-item">
             <img class="team-card" 
@@ -156,8 +161,10 @@
               width="264"
               height="260"
             />
+            <div class="team-text">
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-work">Marketing</p>
+            </div>
           </li>
           <li class="team-item">
             <img  class="team-card"
@@ -166,8 +173,10 @@
               width="264"
               height="260"
             />
+            <div class="team-text">
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-work">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
