--- a/index.html
+++ b/index.html
@@ -62,28 +62,48 @@
         <h2 class="visually-hidden">Specifics</h2>
         <div class="container">
         <ul class="work-features list">
-          <li>
+          <li class="work-feature-item">
+            <div class="icon-container">
+            <svg class="feature-icon">
+              <use href="./images/symbol-defs.svg#icon-antenna"></use>
+            </svg>
+            </div>
             <h3 class="feature-title">Strategy</h3>
             <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="work-feature-item">
+            <div class="icon-container">
+            <svg class="feature-icon">
+              <use href="./images/symbol-defs.svg#icon-clock"></use>
+            </svg>
+          </div>
             <h3 class="feature-title">Punctuality</h3>
             <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="work-feature-item">
+            <div class="icon-container">
+            <svg class="feature-icon">
+              <use href="./images/symbol-defs.svg#icon-diagram"></use>
+            </svg>
+          </div>
             <h3 class="feature-title">Diligence</h3>
             <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="work-feature-item">
+            <div class="icon-container">
+            <svg class="feature-icon">
+              <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+            </svg>
+          </div>
             <h3 class="feature-title">Technologies</h3>
             <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
@@ -140,7 +160,38 @@
             <div class="team-text">
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-work">Product Designer</p> 
-            </div>
+            <ul class="social-list list">
+              <li class="social-item">
+                <a class="social-link link">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-instagram">
+                    </use>
+                  </svg>
+                </a> 
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-fecebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
           </li>
           <li class="team-item">
             <img class="team-card" 
@@ -152,6 +203,37 @@
             <div class="team-text">
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-work">Frontend Developer</p>
+            <ul class="social-list list">
+              <li class="social-item">
+                <a class="social-link link" href="http://">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-instagram">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-fecebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
             </div>
           </li>
           <li class="team-item">
@@ -164,6 +246,37 @@
             <div class="team-text">
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-work">Marketing</p>
+            <ul class="social-list list">
+              <li class="social-item">
+                <a class="social-link link" href="http://">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-instagram">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-fecebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
             </div>
           </li>
           <li class="team-item">
@@ -176,7 +289,88 @@
             <div class="team-text">
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-work">UI Designer</p>
+            <ul class="social-list list">
+              <li class="social-item">
+                <a class="social-link link" href="http://">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-instagram">
+                    </use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-fecebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link" href="">
+                  <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
             </div>
+          </li>
+        </ul>
+      </div>
+      </section>
+      <!-- Section-4 -->
+      <section class="customers">
+        <h2 class="customers-titel">Customers</h2>
+        <div class="customers-container container">
+        <ul class="customers-list list">
+          <li class="customers-item">
+            <a class="customers-link link" href="http://">
+              <svg class="customers-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-item">
+            <a class="customers-link link" href="http://">
+              <svg class="customers-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-item">
+            <a class="customers-link link" href="http://">
+              <svg class="customers-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-item">
+            <a class="customers-link link" href="http://">
+              <svg class="customers-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-item">
+            <a class="customers-link link" href="http://">
+              <svg class="customers-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-item">
+            <a class="customers-link link" href="http://">
+              <svg class="customers-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-6"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -184,7 +378,8 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container"> 
+      <div class="footer-container container">
+        <div class="logo-container">
       <a class="logo link" href="index.html">
         WEB<span class="white">STUDIO</span></a>
       <p class="footer-text">
@@ -192,7 +387,41 @@
         sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
+    <div class="social-media-container">
+      <h2 class="social-media-title">Social media</h2>
+      <ul class="social-media-list list">
+        <li class="social-media-item">
+          <a class="social-media-link link" href="http://">
+            <svg class="social-media-icon">
+              <use class="" href="./images/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-item">
+          <a class="social-media-link link" href="http://">
+            <svg class="social-media-icon">
+              <use href="./images/symbol-defs.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-item">
+          <a class="social-media-link link" href="http://">
+            <svg class="social-media-icon">
+              <use href="./images/symbol-defs.svg#icon-fecebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-item">
+          <a class="social-media-link link" href="http://">
+            <svg class="social-media-icon">
+              <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
+  </div>
     </footer>
   </body>
 </html>
