--- a/portfolio.html
+++ b/portfolio.html
@@ -73,6 +73,7 @@
         <h2 class="visually-hidden">Project-cards</h2>
         <ul class="project-card-list list">
           <li class="project-item">
+            <a class="project-link link" href="">
             <img class="project-card"
               src="./images/img_5.jpg"
               alt="bank-app"
@@ -83,8 +84,10 @@
             <h3 class="feature-title">Banking App Interface Concept</h3>
             <p class="feature-text">App</p>
             </div>
+          </a>
           </li>
           <li class="project-item">
+            <a class="project-link link" href="">
             <img class="project-card"
               src="./images/img_6.jpg"
               alt="payment"
@@ -95,8 +98,10 @@
             <h3 class="feature-title">Cashless Payment</h3>
             <p class="feature-text">Marketing</p>
           </div>
+          </a>
           </li>
           <li class="project-item">
+            <a class="project-link link" href="">
             <img class="project-card"
               src="./images/img_7.jpg"
               alt="laptop"
@@ -107,8 +112,10 @@
             <h3 class="feature-title">Meditaion App</h3>
             <p class="feature-text">App</p>
           </div>
+          </a>
           </li>
           <li class="project-item">
+            <a class="project-link link" href="">
             <img class="project-card" 
             src="./images/img_8.jpg" 
             alt="helm" width="360" 
@@ -118,8 +125,10 @@
             <h3 class="feature-title">Taxi Service</h3>
             <p class="feature-text">Marketing</p>
             </div>
+            </a>
           </li>
           <li class="project-item">
+            <a class="project-link link" href="">
             <img class="project-card"
               src="./images/img_9.jpg"
               alt="moon on screen"
@@ -130,8 +139,10 @@
             <h3 class="feature-title">Screen Illustrations</h3>
             <p class="feature-text">Design</p>
             </div>
+            </a>
           </li>
           <li class="project-item">
+            <a class="project-link link" href="">
             <img class="project-card"
               src="./images/img_10.jpg"
               alt="gerl"
@@ -142,8 +153,10 @@
             <h3 class="feature-title">Online Courses</h3>
             <p class="feature-text">Marketing</p>
             </div>
+            </a>
           </li>
           <li class="project-item">
+            <a class="project-link link" href="">
             <img class="project-card"
               src="./images/img_11.jpg"
               alt="stories"
@@ -154,8 +167,10 @@
             <h3 class="feature-title">Instagram Stories Concept</h3>
             <p class="feature-text">Design</p>
             </div>
+            </a>
           </li>
           <li class="project-item">
+            <a class="project-link link" href="">
             <img class="project-card"
               src="./images/img_12.jpg"
               alt="food on bag"
@@ -166,8 +181,10 @@
             <h3 class="feature-title">Organic Food</h3>
             <p class="feature-text">Web Site</p>
             </div>
+            </a>
           </li>
           <li class="project-item">
+            <a class="project-link link" href="">
             <img class="project-card"
               src="./images/img_13.jpg"
               alt="coffee"
@@ -178,6 +195,7 @@
             <h3 class="feature-title">Fresh Coffee</h3>
             <p class="feature-text">Web Site</p>
             </div>
+            </a>
           </li>
         </ul>
         </div>
@@ -185,14 +203,50 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container container">
+        <div class="logo-container">
       <a class="logo link" href="index.html">
         WEB<span class="white">STUDIO</span></a>
       <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
+        Increase the flow of customers and 
+        sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
+    <div class="social-media-container">
+      <h2 class="social-media-title">Social media</h2>
+      <ul class="social-media-list list">
+        <li class="social-media-item">
+          <a class="social-media-link link" href="http://">
+            <svg class="social-media-icon">
+              <use class="" href="./images/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-item">
+          <a class="social-media-link link" href="http://">
+            <svg class="social-media-icon">
+              <use href="./images/symbol-defs.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-item">
+          <a class="social-media-link link" href="http://">
+            <svg class="social-media-icon">
+              <use href="./images/symbol-defs.svg#icon-fecebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-item">
+          <a class="social-media-link link" href="http://">
+            <svg class="social-media-icon">
+              <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
+  </div>
     </footer>
   </body>
 </html>
