--- a/portfolio.html
+++ b/portfolio.html
@@ -214,31 +214,31 @@
       </p>
       </div>
     <div class="social-media-container">
-      <h2 class="social-media-title">Social media</h2>
+      <p class="social-media-title">Social media</p>
       <ul class="social-media-list list">
         <li class="social-media-item">
-          <a class="social-media-link link" href="http://">
+          <a class="social-media-link link" href="">
             <svg class="social-media-icon">
               <use class="" href="./images/symbol-defs.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-item">
-          <a class="social-media-link link" href="http://">
+          <a class="social-media-link link" href="">
             <svg class="social-media-icon">
               <use href="./images/symbol-defs.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-item">
-          <a class="social-media-link link" href="http://">
+          <a class="social-media-link link" href="">
             <svg class="social-media-icon">
               <use href="./images/symbol-defs.svg#icon-fecebook"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-item">
-          <a class="social-media-link link" href="http://">
+          <a class="social-media-link link" href="">
             <svg class="social-media-icon">
               <use href="./images/symbol-defs.svg#icon-linkedin"></use>
             </svg>
