--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <p class="team-work">Frontend Developer</p>
             <ul class="social-list list">
               <li class="social-item">
-                <a class="social-link link" href="http://">
+                <a class="social-link link" href="">
                   <svg class="social-icon">
                     <use href="./images/symbol-defs.svg#icon-instagram">
                     </use>
@@ -248,7 +248,7 @@
             <p class="team-work">Marketing</p>
             <ul class="social-list list">
               <li class="social-item">
-                <a class="social-link link" href="http://">
+                <a class="social-link link" href="">
                   <svg class="social-icon">
                     <use href="./images/symbol-defs.svg#icon-instagram">
                     </use>
@@ -291,7 +291,7 @@
             <p class="team-work">UI Designer</p>
             <ul class="social-list list">
               <li class="social-item">
-                <a class="social-link link" href="http://">
+                <a class="social-link link" href="">
                   <svg class="social-icon">
                     <use href="./images/symbol-defs.svg#icon-instagram">
                     </use>
@@ -327,46 +327,46 @@
       </section>
       <!-- Section-4 -->
       <section class="customers">
-        <h2 class="customers-titel">Customers</h2>
-        <div class="customers-container container">
+        <div class="container">
+          <h2 class="customers-title">Customers</h2>
         <ul class="customers-list list">
           <li class="customers-item">
-            <a class="customers-link link" href="http://">
+            <a class="customers-link link" href="">
               <svg class="customers-icon">
                 <use href="./images/symbol-defs.svg#icon-logo-1"></use>
               </svg>
             </a>
           </li>
           <li class="customers-item">
-            <a class="customers-link link" href="http://">
+            <a class="customers-link link" href="">
               <svg class="customers-icon">
                 <use href="./images/symbol-defs.svg#icon-logo-2"></use>
               </svg>
             </a>
           </li>
           <li class="customers-item">
-            <a class="customers-link link" href="http://">
+            <a class="customers-link link" href="">
               <svg class="customers-icon">
                 <use href="./images/symbol-defs.svg#icon-logo-3"></use>
               </svg>
             </a>
           </li>
           <li class="customers-item">
-            <a class="customers-link link" href="http://">
+            <a class="customers-link link" href="">
               <svg class="customers-icon">
                 <use href="./images/symbol-defs.svg#icon-logo-4"></use>
               </svg>
             </a>
           </li>
           <li class="customers-item">
-            <a class="customers-link link" href="http://">
+            <a class="customers-link link" href="">
               <svg class="customers-icon">
                 <use href="./images/symbol-defs.svg#icon-logo-5"></use>
               </svg>
             </a>
           </li>
           <li class="customers-item">
-            <a class="customers-link link" href="http://">
+            <a class="customers-link link" href="">
               <svg class="customers-icon">
                 <use href="./images/symbol-defs.svg#icon-logo-6"></use>
               </svg>
@@ -389,31 +389,31 @@
       </p>
       </div>
     <div class="social-media-container">
-      <h2 class="social-media-title">Social media</h2>
+      <p class="social-media-title">Social media</p>
       <ul class="social-media-list list">
         <li class="social-media-item">
-          <a class="social-media-link link" href="http://">
+          <a class="social-media-link link" href="">
             <svg class="social-media-icon">
               <use class="" href="./images/symbol-defs.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-item">
-          <a class="social-media-link link" href="http://">
+          <a class="social-media-link link" href="">
             <svg class="social-media-icon">
               <use href="./images/symbol-defs.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-item">
-          <a class="social-media-link link" href="http://">
+          <a class="social-media-link link" href="">
             <svg class="social-media-icon">
               <use href="./images/symbol-defs.svg#icon-fecebook"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-item">
-          <a class="social-media-link link" href="http://">
+          <a class="social-media-link link" href="">
             <svg class="social-media-icon">
               <use href="./images/symbol-defs.svg#icon-linkedin"></use>
             </svg>
